# tinynws

./: .coverage  .env  .gitignore  Procfile  README.html  README.md  app.json  manage.py  mockData.json  package.json  pyproject.toml  requirements.txt
api/: admin.py  cron.py  models.py  paginations.py  serializers.py  tests.py  urls.py  utils.py  views.py
api/management/commands/: retrievedata.py
api/migrations/: 0001_initial.py
client/: .env  .env.prod  package.json
client/cypress/integration/tests/: ui-sample-testing.js
client/public/: index.html  manifest.json
client/src/: App.js  App.test.js  index.css
client/src/components/: Card.js  Headings.js  List.js  Loader.js
client/src/containers/: DetailPage.js  DetailPage.test.js  Paginator.js
htmlcov/: api___init___py.html  api_admin_py.html  api_apps_py.html  api_management_commands_retrievedata_py.html  api_migrations_0001_initial_py.html  api_migrations___init___py.html  api_models_py.html  api_paginations_py.html  api_serializers_py.html  api_tests_py.html  api_urls_py.html  api_utils_py.html  api_views_py.html  index.html  manage_py.html  neod_backend_api___init___py.html  neod_backend_api_asgi_py.html  neod_backend_api_settings_py.html  neod_backend_api_urls_py.html  neod_backend_api_wsgi_py.html  status.json
neod_backend_api/: asgi.py  urls.py  wsgi.py
neod_backend_api/settings/: base.py  dev.py  prod.py
